<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <TextView
            android:text="@string/text_player_turn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_player_turn_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/text_player_turn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_player_turn_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_player_turn_1"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/text_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_guest"
            app:layout_constraintLeft_toRightOf="@id/text_player_turn_1"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="5dp"/>
    <TextView
            android:text="@string/text_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_player"
            app:layout_constraintLeft_toRightOf="@id/text_player_turn_2"
            app:layout_constraintTop_toBottomOf="@id/text_guest" android:textSize="24sp"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            android:showDividers="middle">

        <TableRow
                android:id="@+id/table1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:layout_height="wrap_content">
            </Button>
        </TableRow>
        <TableRow
                android:id="@+id/table2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/button4"
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="40sp">
            </Button>
            <Button
                    android:id="@+id/button5"
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="40sp">
            </Button>
            <Button
                    android:id="@+id/button6"
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="40sp">
            </Button>
        </TableRow>
        <TableRow
                android:id="@+id/table3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/button7"
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="40sp">
            </Button>
            <Button
                    android:id="@+id/button8"
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="40sp">
            </Button>
            <Button
                    android:id="@+id/button9"
                    android:text=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="40sp">
            </Button>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>